@@ -46,7 +46,7 @@
  * Load required classes
  */
 require_once('classes/Statistics.php');
-
+require_once('classes/Session.php');
 /**
  * An abstract class.  All statistics must inherit from this class
  *
